# piper_tts

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/piper_tts_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: piper_tts.dart  piper_tts_bindings_generated.dart
lib/src/: bindings.dart  piper.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  piper_tts.c
windows/: CMakeLists.txt
